# TailFirmware

./: .gitignore  CLAUDE.md  CMakeLists.txt  build.bat  sdkconfig.defaults
.claude/: settings.json  settings.local.json
docs/: app-integration.md  architecture.md  ble-protocol.md  build-environment.md  development-plan.md  external-dependencies.md  mcu-alternatives.md
main/: CMakeLists.txt  app_bridge.cpp  ble_service.c  ble_service.h  main.c  servo.c  servo.h
main/ble/: ble_protocol.h
main/config/: config_manager.cpp  config_manager.h  config_types.h  fft_buffer.cpp  fft_buffer.h  pin_config.h
main/drivers/: encoder_driver.c  encoder_driver.h  i2c_mux.c  i2c_mux.h  imu_driver.c  imu_driver.h  led_strip_driver.c  led_strip_driver.h
main/led/: color.h  layer_compositor.cpp  layer_compositor.h  led_effect.h  led_matrix.cpp  led_matrix.h
main/led/effects/: audio_bar_effect.cpp  audio_bar_effect.h  audio_freq_bars_effect.cpp  audio_freq_bars_effect.h  audio_power_effect.cpp  audio_power_effect.h  image_effect.cpp  image_effect.h  rainbow_effect.cpp  rainbow_effect.h  static_color_effect.cpp  static_color_effect.h
main/motion/: axis_controller.cpp  axis_controller.h  motion_pattern.h  motion_system.cpp  motion_system.h  pid_controller.cpp  pid_controller.h
main/motion/patterns/: loose_pattern.cpp  loose_pattern.h  static_pattern.cpp  static_pattern.h  wagging_pattern.cpp  wagging_pattern.h
src/: ble_service.c  ble_service.h  btstack_config.h  main.c  servo.c  servo.h  tail_service.gatt
